{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 150,
  "lineage": "5218765f-c1e1-893e-cecd-ed232d3438b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb7048487e53325a",
            "associate_with_private_ip": "10.2.1.10",
            "association_id": "eipassoc-0be1ad3fbf06d5c93",
            "domain": "vpc",
            "id": "eipalloc-0fb7048487e53325a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bf554d6517228a32",
            "private_dns": "ip-10-2-1-10.ap-south-1.compute.internal",
            "private_ip": "10.2.1.10",
            "public_dns": "ec2-13-200-240-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.240.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.test-interface",
            "aws_security_group.dynamic-ssh-http-sg",
            "aws_subnet.tf-pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_with_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:528462248584:instance/i-06fd44fb534f4d763",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fd44fb534f4d763",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gowdasagar",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bf554d6517228a32"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf554d6517228a32",
            "private_dns": "ip-10-2-1-10.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.10",
            "public_dns": "ec2-13-200-240-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.240.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:528462248584:key/d2e2106a-1546-4fa6-9745-0c7d3de4cf26",
                "throughput": 0,
                "volume_id": "vol-00ff5b619c6ce6465",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ff6623cc3d075bc",
            "tags": {
              "Name": "nginx-instance-with-eip"
            },
            "tags_all": {
              "Name": "nginx-instance-with-eip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c99f9a10eae009c7"
            ]
          },
          "dependencies": [
            "aws_network_interface.test-interface",
            "aws_security_group.dynamic-ssh-http-sg",
            "aws_subnet.tf-pub-subnet",
            "aws_vpc.tf-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:internet-gateway/igw-059bfebe6e86e0961",
            "id": "igw-059bfebe6e86e0961",
            "owner_id": "528462248584",
            "vpc_id": "vpc-05a1b512997cd7f70"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:network-interface/eni-0bf554d6517228a32",
            "id": "eni-0bf554d6517228a32",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3b:46:53:8d:19",
            "owner_id": "528462248584",
            "private_dns_name": "ip-10-2-1-10.ap-south-1.compute.internal",
            "private_ip": "10.2.1.10",
            "private_ip_list": [
              "10.2.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.2.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c99f9a10eae009c7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ff6623cc3d075bc"
          },
          "dependencies": [
            "aws_security_group.dynamic-ssh-http-sg",
            "aws_subnet.tf-pub-subnet",
            "aws_vpc.tf-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:route-table/rtb-037b3ae1ecdb562e4",
            "id": "rtb-037b3ae1ecdb562e4",
            "owner_id": "528462248584",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059bfebe6e86e0961",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-crt"
            },
            "tags_all": {
              "Name": "tf-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a1b512997cd7f70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c0819bf851c4af0",
            "route_table_id": "rtb-037b3ae1ecdb562e4",
            "subnet_id": "subnet-05ff6623cc3d075bc"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.tf-pub-rt",
            "aws_subnet.tf-pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dynamic-ssh-http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:security-group/sg-0c99f9a10eae009c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c99f9a10eae009c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231226070417228900000001",
            "name_prefix": "terraform-",
            "owner_id": "528462248584",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamic-ssh-http-sg"
            },
            "tags_all": {
              "Name": "dynamic-ssh-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a1b512997cd7f70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:subnet/subnet-05ff6623cc3d075bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ff6623cc3d075bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528462248584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-05a1b512997cd7f70"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528462248584:vpc/vpc-05a1b512997cd7f70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0bc8960b0967d4936",
            "default_route_table_id": "rtb-03fe930dd17c2855f",
            "default_security_group_id": "sg-09c16299d0f11cf9f",
            "dhcp_options_id": "dopt-0ca6603519e718cd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a1b512997cd7f70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fe930dd17c2855f",
            "owner_id": "528462248584",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}